# richchk

./: .flake8  .gitignore  .pre-commit-config.yaml  CLAUDE.md  README.md  edited.chk  pyproject.toml
.github/: CODEOWNERS
.github/workflows/: pre-commit.yaml  publish.yaml
chkjson/: chk_parser.py  setup.py
chkjson/parsers/: abstract_chk_section_parser.py  chk_parser.py  chk_section_parser_registry.py  chk_str_parser.py
chkjson/utils/: fileutils.py
data/generated-trigger-pyfiles/: scamount.py  sccount.py  sclocation.py  sclocation2.py  sclocationx.py  scmilliseconds.py  scpercent.py  scscore.py  scseconds.py  scswitch.py  sctext.py  sctitle.py  scunknown_wav_arg.py  scwav.py
data/generated-trigger-pyfiles-2/: scunit.py
data/templates/: trigger_statement_real_template.py  trigger_statement_template.py
examples/: hello_world.py  hyper_triggers.py
examples/generated-maps/: hello-world-generated.scx
examples/maps/: base-map.scx
pycharm/: richchk-file-watchers.xml
requirements/: dev.txt
scripts/: render_map.py  terrain_utils.py
scripts/tileset_data/: ashworld.cv5  ashworld.vr4  ashworld.vx4  badlands.cv5  badlands.vr4  badlands.vx4  desert.cv5  desert.vx4  ice.cv5  ice.vx4  install.cv5  install.vr4  install.vx4  jungle.cv5  jungle.vr4  platform.cv5  platform.vr4  platform.vx4  twilight.cv5  twilight.vx4
src/: setup.py
src/chkjson/: chk.py  chkedit.py  dev_defaults.py  fileutils.py  logger.py  semver.py  (+1 more)
test/: always_fail_test.py  chk_resources.py  conftest.py
tst/: test_chk.py  test_chkedit.py  test_chkstr.py  test_chkunix.py  test_semver.py
(+708 files in other folders)
